:_basedir: ../
:_imagesdir: images/
#:toc: right


[[__release-notes_summary]]
== Summary

This table summarises all releases of Apache Isis to date.

[cols="1,2,4a,>1,>1,>1,3a"]
|===
| Version
| Date
| Release notes
| Features
| Improves
| Bugs
| JIRA relnotes

| xref:release-notes.adoc#_release-notes_1.16.2[1.16.2]
| 05-03-2018
| RO viewer support, performance improvement, fix of severe bug for parented checkboxes
| 1
| 6
| 1
| https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311171&version=12342822[Release notes for 1.16.2]

| xref:release-notes.adoc#_release-notes_1.16.1[1.16.1]
| 22-02-2018
| Parented collections with checkboxes, replay module
| 4
| 10
| 17
| https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311171&version=12342424[Release notes for v1.16.1]

| xref:release-notes.adoc#_release-notes_1.16.0[1.16.0]
| 08-01-2018
| Modules, simplified bootstrapping, menubars.layout.xml
| 13
| 16
| 26
| https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311171&version=12342073[Release notes for v1.16.0]

| xref:release-notes.adoc#_release-notes_1.15.1[1.15.1]
| 25-09-2017
| Bug fixes, Wicket 7.9.0, Markup valuetype
| 5
| 4
| 9
| link:https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311171&version=12341577[Release notes for v1.15.1]

| xref:release-notes.adoc#_release-notes_1.15.0[1.15.0]
| 14-08-2017
| Inline prompts, Wicket 7.x
| 7
| 25
| 34
| link:https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311171&version=12338577[Release notes for v1.15.0]

| xref:release-notes.adoc#_release-notes_1.14.0[1.14.0]
| 19-02-2017
| Actions with collection parameters, metamodel validations.
| 3
| 11
| 11
| link:https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311171&version=12338898[Release notes for v1.14.0]

| xref:release-notes.adoc#_release-notes_1.13.2.1[1.13.2.1]
| 03-jan-2017