@@ -91,6 +91,9 @@ public class SpecificationLoader implements ApplicationScopedComponent {
 
     private final static Logger LOG = LoggerFactory.getLogger(SpecificationLoader.class);
 
+    public static final String INTROSPECTOR_PARALLELIZE_KEY = "isis.reflector.introspector.parallelize";
+    public static final boolean INTROSPECTOR_PARALLELIZE_DEFAULT = true;
+
     //region > constructor, fields
     private final ClassSubstitutor classSubstitutor = new ClassSubstitutor();
 
@@ -242,7 +245,14 @@ public class SpecificationLoader implements ApplicationScopedComponent {
             callables.add(callable);
         }
         ThreadPoolSupport threadPoolSupport = ThreadPoolSupport.getInstance();
-        List<Future<Object>> futures = threadPoolSupport.invokeAllSequential(callables);
+        final boolean parallelize =
+                configuration.getBoolean(INTROSPECTOR_PARALLELIZE_KEY, INTROSPECTOR_PARALLELIZE_DEFAULT);
+        List<Future<Object>> futures;
+        if(parallelize) {
+            futures = threadPoolSupport.invokeAll(callables);
+        } else {
+            futures = threadPoolSupport.invokeAllSequential(callables);
+        }
         threadPoolSupport.joinGatherFailures(futures);
 
 
